--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,10 +2,7 @@
 name = "integrify-docs"
 version = "1.0.0"
 description = "Integrify üçün dokumentasiya repositoriyası."
-authors = [
-    { name = "mmzeynalli", email = "miradil.zeynalli@gmail.com" },
-    { name = "vahidzhe", email = "vahidzhe@gmail.com" },
-]
+authors = [{ name = "mmzeynalli", email = "miradil.zeynalli@gmail.com" }]
 requires-python = "~=3.12"
 readme = "README.md"
 license = "GPL-3.0-or-later"
