--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,6 @@ publish = "site"
 command = """
 pip3 install --user uv &&
 export PATH=$PATH:$HOME/.local/bin &&
-uv sync --no-dev --no-group=gh &&
+uv sync --no-dev &&
 uv run --no-sync mkdocs build --strict
 """
