--- a/netlify.toml
+++ b/netlify.toml
@@ -5,5 +5,6 @@ command = """
 pip3 install --user uv && 
 export PATH=$PATH:$HOME/.local/bin && 
 uv sync --no-dev && 
+uv pip install . && 
 uv run --no-sync mkdocs build -f docs/az/mkdocs.yml --strict
 """
