Updated griffe_pydantic version to use --strict. Fixed netlify.toml

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,12 @@
 [build]
 base = "."
-publish = "site"
+publish = "docs/az/site"
 command = """
 pip3 install --user uv && 
 export PATH=$PATH:$HOME/.local/bin && 
 uv sync && 
 uv pip install . && 
 ./fetch_integrations.sh && 
-uv run --active --no-sync mkdocs build -f docs/az/mkdocs.yml &&
+uv run --active --no-sync mkdocs build -f docs/az/mkdocs.yml --strict &&
 rm -rf docs/az/navs/*.yml src/integrify/
 """
