--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,13 @@
 [build]
 base = "."
-publish = "docs/az/site"
+publish = "docs/site"
 command = """
 pip3 install --user uv && 
 export PATH=$PATH:$HOME/.local/bin && 
 uv sync && 
 uv pip install . && 
 ./fetch_integrations.sh && 
-uv run --active --no-sync mkdocs build -f docs/az/mkdocs.yml --strict &&
-rm -rf docs/az/navs/*.yml src/integrify/
+uv run --active --no-sync mkdocs build -d ../site/az -f docs/az/mkdocs.yml --strict && 
+uv run --active --no-sync mkdocs build -d ../site/en -f docs/en/mkdocs.yml --strict && 
+rm -rf docs/navs/*.yml src/integrify/
 """
